--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -26,16 +26,16 @@ jobs:
       fail-fast: false
       # max-parallel: 9
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04]
-        python-version: [3.6, 3.7, 3.8]
+        os: [ubuntu-20.04]
+        python-version: [3.7, 3.8, 3.9]
         experimental: [false]
         include:
-          - os: ubuntu-20.04
-            python-version: 3.8
+          - os: ubuntu-22.04
+            python-version: '3.10'
             experimental: true
             name: Experimental build - latest Ubuntu
-          - os: ubuntu-20.04
-            python-version: 3.9
+          - os: ubuntu-22.04
+            python-version: 3.11
             experimental: true
             name: Experimental build - latest Python
     steps:
