--- a/.github/workflows/js-sdk_macos.yml
+++ b/.github/workflows/js-sdk_macos.yml
@@ -2,7 +2,7 @@
 
 name: js-sdk_macos
 
-on: 
+on:
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
       # max-parallel: 9
       matrix:
         os: [macos-10.15]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, '3.10']
         experimental: [true]
     steps:
       - uses: actions/checkout@master
